#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(libexample, 1.0, lostjared@lostsidedead.com)
AC_CANONICAL_SYSTEM
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_INIT_AUTOMAKE
AC_PROG_LIBTOOL

AC_OUTPUT(Makefile example.pc src/Makefile)
